--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">rma21projekat</string>
+    <string name="app_name">"RMA '21 Projekat"</string>
 </resources>
