--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">"RMA '21 Projekat"</string>
+    <string-array name="spinnerOpcije">
+        <item>Svi moji kvizovi</item>
+        <item>Svi kvizovi</item>
+        <item>Urađeni kvizovi</item>
+        <item>Budući kvizovi</item>
+        <item>Prošli kvizovi (neurađeni)</item>
+    </string-array>
 </resources>
