--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
         <item>Svi kvizovi</item>
         <item>Urađeni kvizovi</item>
         <item>Budući kvizovi</item>
-        <item>Prošli kvizovi (neurađeni)</item>
+        <item>Prošli kvizovi</item>
     </string-array>
 </resources>
