--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
         <item>Prošli kvizovi</item>
     </string-array>
     <string-array name="godine">
+        <item></item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
