--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">"RMA '21 Projekat"</string>
+    <string name="predmetSpinner">"Odaberi predmet"</string>
+    <string name="grupaSpinner">"Odaberi grupu"</string>
     <string-array name="spinnerOpcije">
         <item>Svi moji kvizovi</item>
         <item>Svi kvizovi</item>
@@ -8,7 +10,7 @@
         <item>Prošli kvizovi</item>
     </string-array>
     <string-array name="godine">
-        <item></item>
+        <item>Odaberi godinu</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
